# relic-monorepo

./: README.rst  build-vk.sh
bellman/: Cargo.toml
bellman/src/: lib.rs  multicore.rs
bellman/src/kate_commitment/: mod.rs
bellman/src/plonk/: mod.rs
bellman/src/plonk/better_better_cs/: cs.rs  cs_old.rs  data_structures.rs  lookup_tables.rs  mod.rs
bellman/src/plonk/better_better_cs/gates/: main_gate_with_d_next.rs  mod.rs  selector_optimized_with_d_next.rs
bellman/src/plonk/better_better_cs/proof/: mod.rs
bellman/src/plonk/better_better_cs/redshift/: mod.rs  prover.rs
bellman/src/plonk/better_better_cs/setup/: mod.rs
bellman/src/plonk/better_better_cs/verifier/: mod.rs
bellman/src/plonk/better_cs/: keys.rs
bellman/src/plonk/blake2_const/blake2s/src/: lib.rs
bellman/src/plonk/commitments/transcript/: .rescue_transcript.rs.swp  mod.rs
bellman/src/plonk/commitments/transparent/: mod.rs
bellman/src/plonk/commitments/transparent/fri/: mod.rs
bellman/src/plonk/commitments/transparent/iop/: blake2s_trivial_iop.rs
bellman/src/plonk/commitments/transparent/precomputations/: mod.rs
bellman/src/plonk/generator/: mod.rs
bellman/src/plonk/prover/: mod.rs
bellman/src/plonk/redshift/: prover.rs
bellman/src/plonk/tester/: mod.rs
bellman/src/plonk/verifier/: mod.rs
deployed-v1/: expected-sha256.sum  inner-1-vk  middle-1-vk  middle-1024-vk  middle-128-vk  middle-16-vk  middle-16384-vk  middle-2-vk  middle-2048-vk  middle-256-vk  middle-32-vk  middle-32768-vk  middle-4-vk  middle-4096-vk  middle-512-vk  middle-64-vk  middle-65536-vk  middle-8-vk  middle-8192-vk  outer-1024-vk  outer-128-vk  outer-16-vk  outer-16384-vk  outer-2048-vk  outer-256-vk  outer-32-vk  outer-32768-vk  outer-4-vk  outer-4096-vk  outer-512-vk  outer-64-vk  outer-65536-vk  outer-8-vk  outer-8192-vk
deployed-v2/: expected-sha256.sum  vk-inner  vk-middle-1024  vk-middle-128  vk-middle-16  vk-middle-16384  vk-middle-2  (+19 more)
proof_generator/: Cargo.toml
proof_generator/src/: main.rs
proof_generator/src/circuit/: account.rs  inner.rs  mod.rs  param.rs
proof_generator/src/circuit/gadgets/: account.rs  header.rs  merkle.rs  mod.rs  sha256.rs  trie.rs  variable_jive.rs  variable_keccak.rs  variable_rescue.rs
proof_generator/src/circuit/gadgets/utils/: bounded.rs  channel.rs  digest.rs  mod.rs  num.rs  pad.rs  range.rs  rlc.rs  rlp.rs  vec.rs
proof_generator/src/circuit/recursive/: channel.rs  gadgets.rs  helper_functions.rs  mod.rs  utils.rs
proof_generator/src/circuit/recursive/affine_point_wrapper/: aux_data.rs  mod.rs  with_zero_flag.rs
(+32 files in other folders)
