[package]
name = "proof_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.58"
base64 = "0.13.0"
clap = { version = "3.2.14", features = ["derive"] }
ctrlc = "3.2.3"
franklin_crypto = { package = "franklin-crypto", path = "../franklin-crypto", features = ["multicore", "plonk"]}
handlebars = "4.3.3"
hex = "0.4.3"
once_cell = "1.13.0"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.82"
sha2 = "0.10.2"
tiny_keccak = { package = "tiny-keccak", features = ["keccak"], version = "2.0.2" }
url = "2.2.2"

[features]
default = []
